# middleware/jwt.go
@@ -3,6 +3,7 @@ package middleware
 import (
 	"errors"
 	"meet_directly/model/system/response"
+	"meet_directly/service"
 	"meet_directly/utils"
 
 	"github.com/gin-gonic/gin"
@@ -11,6 +12,8 @@ import (
 	"strconv"
 	"time"
 )
+
+var jwtService = service.ServiceGroupApp.SystemServiceGroup.JwtService
 
 func JWTAuth() gin.HandlerFunc {
 	return func(c *gin.Context) {
@@ -21,7 +24,12 @@ func JWTAuth() gin.HandlerFunc {
 			c.Abort()
 			return
 		}
-
+		if jwtService.IsBlacklist(token) {
+			response.NoAuth("您的帐户异地登陆或令牌失效", c)
+			utils.ClearToken(c)
+			c.Abort()
+			return
+		}
 		j := utils.NewJWT()
 		// parseToken 解析token包含的信息
 		claims, err := j.ParseToken(token)
