# router/system/sys_jwt.go
@@ -1,0 +1,16 @@
+package system
+
+import (
+	"github.com/gin-gonic/gin"
+	v1 "meet_directly/api/v1"
+)
+
+type JwtRouter struct{}
+
+func (s *JwtRouter) InitJwtRouter(Router *gin.RouterGroup) {
+	jwtRouter := Router.Group("jwt")
+	jwtApi := v1.ApiGroupApp.SystemApiGroup.JwtApi
+	{
+		jwtRouter.POST("jsonInBlacklist", jwtApi.JsonInBlacklist) // jwt加入黑名单
+	}
+}
